--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,9 @@
     },
     "rules": {
         "no-console":"off",
-        "linebreak-style":"off"
+        "linebreak-style":"off",
+        "no-param-reassign":"off",
+        "impost/extensions":"never"
+
     }
 }
