--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,7 @@
         "no-console":"off",
         "linebreak-style":"off",
         "no-param-reassign":"off",
-        "impost/extensions":"never"
+        "import/extensions":"never"
 
     }
 }
